--- a/src/components/SignUpScreen.css
+++ b/src/components/SignUpScreen.css
@@ -23,6 +23,7 @@
     color: #2f2f2f;
     font-size: 48px;
     font-weight: 700;
+
 }
 
 .underline-under-text{
@@ -71,7 +72,7 @@
 }
 
 .forgot-password span {
-    color: #4c00b4;
+    color: #9b855a;
     cursor: pointer;
 }
 
@@ -93,11 +94,12 @@
     width: 220px;
     height: 59px;
     color: #fff;
-    background: #4c00b4;
+    background: #9b855a;
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .submit-container .btn:hover{
